# ttfest_pkg

./: CMakeLists.txt  README.md  package.xml  sol.py
launch/: ttfest_launch.py
models/ttfest_bridge/: model.config  model.sdf
models/ttfest_bridge/meshes/: untitled.dae
models/ttfest_obstacle/: model.config  model.sdf
models/ttfest_obstacle/meshes/: obstacle.dae
models/ttfestcar/: model.config  model.sdf
models/ttfestcar/meshes/: rascar.dae
models/ttfestroad/: model.config  model.sdf
models/ttfestroad/meshes/: road.dae
scripts/: camera_node.py  control_node.py  lane_following_node.py  lidar_node.py  lidar_visualize_node.py  red_light_detection_node.py
ttfest_pkg/: guiutils.py  line.py  pid_controller.py  process.py  threshold.py
worlds/: ttfest_world.world  ttfest_world_v2.world  ttfest_world_v3.world
